--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.12.8",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
+    "antd": "^5.17.0",
     "jsencrypt": "^3.3.2",
+    "lodash": "^4.17.21",
     "next": "13.0.0",
     "nookies": "^2.5.2",
+    "pdfjs-dist": "^3.6.172",
+    "razorpay": "^2.9.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-pdf": "^9.1.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "swr": "^2.2.5",
+    "swr-devtools": "^1.3.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.5",
     "@types/node": "^20",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18",
     "@types/styled-components": "^5.1.34",
-    "axios": "^1.6.5",
+    "axios": "^1.7.2",
     "babel-plugin-styled-components": "^2.1.4",
     "dayjs": "^1.11.10",
     "eslint": "^8",
@@ -29,6 +42,6 @@
     "next-auth": "^4.24.5",
     "react-hook-form": "^7.49.3",
     "styled-components": "^6.1.8",
-    "typescript": "^5"
+    "typescript": "^5.4.5"
   }
 }
