--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "next-auth": "^4.24.5",
     "react-hook-form": "^7.49.3",
     "styled-components": "^6.1.8",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0"
   }
 }
